feat: add create opening docs
